fix spacing

--- a/sass/_media.scss
+++ b/sass/_media.scss
@@ -22,7 +22,7 @@
   section.contact .submit {
     margin: 50px auto 50px auto;
   }
-  section.events .buyTickets {
+  section.events button {
     margin: 50px auto 0px auto;
   }
   .personalBio {
